--- a/Source/UI/LogIn.ui
+++ b/Source/UI/LogIn.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1227</width>
+    <width>1105</width>
     <height>715</height>
    </rect>
   </property>
@@ -17,7 +17,10 @@
    <string notr="true">background-color : #22333B;
 </string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetDefaultConstraint</enum>
+   </property>
    <item>
     <widget class="QFrame" name="frame">
      <property name="styleSheet">
@@ -229,17 +232,26 @@ QPushButton:hover{
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
       <item>
        <widget class="QLabel" name="label_3">
+        <property name="maximumSize">
+         <size>
+          <width>769</width>
+          <height>677</height>
+         </size>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="../../../SourceCode/UI/icons.qrc">:/icons/two-colleagues-at-factory.jpg</pixmap>
+         <pixmap resource="icons.qrc">:/icons/icons/two-colleagues-factory.jpg</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -249,7 +261,7 @@ QPushButton:hover{
   </layout>
  </widget>
  <resources>
-  <include location="../../../SourceCode/UI/icons.qrc"/>
+  <include location="icons.qrc"/>
  </resources>
  <connections/>
 </ui>
