--- a/Source/UI/MainWindow.ui
+++ b/Source/UI/MainWindow.ui
@@ -17,7 +17,7 @@
    <property name="styleSheet">
     <string notr="true"/>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -149,7 +149,7 @@ QPushButton:hover{
                <property name="minimumSize">
                 <size>
                  <width>0</width>
-                 <height>50</height>
+                 <height>40</height>
                 </size>
                </property>
                <property name="maximumSize">
@@ -209,7 +209,7 @@ background-position: center ;</string>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
        <property name="spacing">
         <number>0</number>
        </property>
@@ -283,7 +283,7 @@ background-position: center ;</string>
                <x>0</x>
                <y>0</y>
                <width>66</width>
-               <height>569</height>
+               <height>581</height>
               </rect>
              </property>
              <property name="styleSheet">
