--- a/Source/UI/DemandeInterventionUis/demandeInterventionConsulter.ui
+++ b/Source/UI/DemandeInterventionUis/demandeInterventionConsulter.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1014</width>
+    <width>1025</width>
     <height>811</height>
    </rect>
   </property>
@@ -32,7 +32,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="icons.qrc">:/icons/icons/request.png</pixmap>
+         <pixmap resource="../icons.qrc">:/icons/icons/request.png</pixmap>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -164,7 +164,7 @@ QPushButton:hover{
        </widget>
       </item>
       <item>
-       <widget class="QTableView" name="tableViewDemandeIntervention"/>
+       <widget class="QTableWidget" name="tableWidgetDemandeIntervention"/>
       </item>
      </layout>
     </widget>
@@ -172,7 +172,8 @@ QPushButton:hover{
   </layout>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../icons.qrc"/>
+  <include location="../icons.qrc"/>
   <include location="icons.qrc"/>
  </resources>
  <connections/>
