--- a/Source/UI/BonTravailUIs/bonTravailConsulter.ui
+++ b/Source/UI/BonTravailUIs/bonTravailConsulter.ui
@@ -32,7 +32,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="icons.qrc">:/icons/icons/pencil.png</pixmap>
+         <pixmap resource="../icons.qrc">:/icons/icons/pencil.png</pixmap>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -164,11 +164,7 @@ QPushButton:hover{
        </widget>
       </item>
       <item>
-       <widget class="QTableView" name="tableViewBonTravail">
-        <property name="cursor" stdset="0">
-         <cursorShape>ArrowCursor</cursorShape>
-        </property>
-       </widget>
+       <widget class="QTableWidget" name="tableWidgetBonTravail"/>
       </item>
      </layout>
     </widget>
@@ -176,7 +172,8 @@ QPushButton:hover{
   </layout>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../icons.qrc"/>
+  <include location="../icons.qrc"/>
   <include location="icons.qrc"/>
  </resources>
  <connections/>
