--- a/Source/UI/EquipementUIs/equipementConsulter.ui
+++ b/Source/UI/EquipementUIs/equipementConsulter.ui
@@ -32,7 +32,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="icons.qrc">:/icons/icons/service.png</pixmap>
+         <pixmap resource="../icons.qrc">:/icons/icons/service.png</pixmap>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -142,7 +142,7 @@ QPushButton:hover{
        </widget>
       </item>
       <item>
-       <widget class="QTableView" name="tableViewEquipement"/>
+       <widget class="QTableWidget" name="tableWidgetEquipement"/>
       </item>
      </layout>
     </widget>
@@ -150,7 +150,8 @@ QPushButton:hover{
   </layout>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../icons.qrc"/>
+  <include location="../icons.qrc"/>
   <include location="icons.qrc"/>
  </resources>
  <connections/>
