--- a/Source/UI/AllUsersUIs/MainWindow.ui
+++ b/Source/UI/AllUsersUIs/MainWindow.ui
@@ -187,12 +187,40 @@ background-position: center ;</string>
           </item>
           <item>
            <widget class="QFrame" name="tittle_bar">
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="frameShape">
              <enum>QFrame::StyledPanel</enum>
             </property>
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+              <widget class="QLabel" name="LabesSpace">
+               <property name="font">
+                <font>
+                 <pointsize>12</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:white;</string>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -283,7 +311,7 @@ background-position: center ;</string>
                <x>0</x>
                <y>0</y>
                <width>66</width>
-               <height>581</height>
+               <height>571</height>
               </rect>
              </property>
              <property name="styleSheet">
@@ -398,7 +426,7 @@ QPushButton:hover{
   </widget>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
+  <include location="../icons.qrc"/>
  </resources>
  <connections/>
 </ui>
