--- a/Source/UI/BonTravailUIs/bonTravailConsulter.ui
+++ b/Source/UI/BonTravailUIs/bonTravailConsulter.ui
@@ -174,7 +174,7 @@ QPushButton:hover{
  <resources>
   <include location="../icons.qrc"/>
   <include location="../icons.qrc"/>
-  <include location="icons.qrc"/>
+  <include location="../icons.qrc"/>
  </resources>
  <connections/>
 </ui>
